# scim-anthy

./: AUTHORS  ChangeLog  KEYBIND-ATOK.txt  KEYBIND-MSIME.txt  KEYBIND-WNN.txt  Makefile.am  NEWS  README  TODO  bootstrap  configure.ac
data/: Makefile.am  atok.sty  azik.sty  canna.sty  conjugation  diction  msime.sty  nicola-a.sty  nicola-j.sty  oasys100j.sty  vje-delta.sty  wnn.sty
intl/: .cvsignore
m4/: ChangeLog
po/: .cvsignore  ChangeLog  Makevars  POTFILES.in  de.po  ja.po
skim/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  bootstrap  configure.in.in
skim/icons/: Makefile.am
skim/po/: Makefile.am  ja.po  skim-scim-anthy.pot
skim/setupui/: .cvsignore  Makefile.am  anthy.kcfg  anthy.kcfgc  anthyui.ui  scim_anthy_default_tables.cpp  scim_anthy_key2kana_table.cpp  scim_anthy_key2kana_table.h  scim_anthy_style_file.h  scim_anthy_table_editor.cpp  scim_anthy_table_editor.h  scimanthysettingplugin.cpp  scimanthysettingplugin.h  skimplugin_scim_anthy_config.desktop
src/: Makefile.am  conv_table.cpp  intl.h  scim_anthy_action.cpp  scim_anthy_action.h  scim_anthy_automaton.cpp  scim_anthy_automaton.h  scim_anthy_color_button.cpp  scim_anthy_color_button.h  scim_anthy_const.h  scim_anthy_conv_table.cpp  scim_anthy_conv_table.h  scim_anthy_conversion.cpp  scim_anthy_conversion.h  scim_anthy_default_tables.cpp  scim_anthy_default_tables.h  scim_anthy_diction.cpp  scim_anthy_diction.h  scim_anthy_factory.cpp  scim_anthy_factory.h  scim_anthy_helper.cpp  scim_anthy_helper.h  scim_anthy_imengine.cpp  scim_anthy_imengine.h  scim_anthy_imengine_factory.cpp  scim_anthy_imengine_factory.h  scim_anthy_imengine_setup.cpp  scim_anthy_kana.cpp  scim_anthy_kana.h  scim_anthy_key2kana.cpp  scim_anthy_key2kana.h  scim_anthy_key2kana_base.h  scim_anthy_key2kana_convertor.cpp  scim_anthy_key2kana_convertor.h  scim_anthy_key2kana_table.cpp  scim_anthy_key2kana_table.h  scim_anthy_key2kana_table_default.cpp  scim_anthy_key2kana_table_default.h  scim_anthy_nicola.cpp  scim_anthy_nicola.h  (+22 more)
