MAINTAINERCLEANFILES	= Makefile.in

icondir			= $(SCIM_ICONDIR)
icon_DATA		= scim-anthy.png \
			  scim-anthy-dict.png \
			  scim-anthy-swap-colors.png

styledir		= $(SCIM_ANTHY_DATADIR)/style
style_DATA		= atok.sty \
			  msime.sty \
			  canna.sty \
			  wnn.sty \
			  vje-delta.sty \
			  azik.sty \
			  101kana.sty \
			  nicola-a.sty \
			  nicola-j.sty \
			  oasys100j.sty
EXTRA_DIST		= $(icon_DATA) $(style_DATA)
