## Copyright (C) 2004 Hiroyuki Ikezoe
## Copyright (C) 2004-2005 Takuro Ashie
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

MAINTAINERCLEANFILES	= Makefile.in

icondir			= $(SCIM_ICONDIR)
icon_DATA		= scim-anthy.png \
			  scim-anthy-dict.png \
			  scim-anthy-swap-colors.png

styledir		= $(SCIM_ANTHY_DATADIR)/style
style_DATA		= atok.sty \
			  msime.sty \
			  canna.sty \
			  wnn.sty \
			  vje-delta.sty \
			  azik.sty \
			  101kana.sty \
			  nicola-a.sty \
			  nicola-j.sty \
			  oasys100j.sty \
			  tron-dvorak.sty \
			  tron-qwerty-jp.sty \
			  tsuki-2-203-101.sty \
			  tsuki-2-203-106.sty

dictiondir		= $(SCIM_ANTHY_DATADIR)
diction_DATA		= diction

EXTRA_DIST		= $(icon_DATA) $(style_DATA) $(diction_DATA)
